k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hms-production
  labels:
    name: hms-production
